[package]
name = "hls_downloader_tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", default-features = false }

[dependencies]
tauri = { version = "1", default-features = false, features = ["wry", "dialog-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["stream", "rustls-tls"] }
url = "=2.4.1"
futures-util = "0.3"
indexmap = "=2.2.6"
headless_chrome = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
